# simple_lanhai

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  LICENSE  README.md  readme.md  requirements.txt
config/: LDS-E400-E.txt
example/: main.cpp
include/LLSInterfaceCodeExamples/: BinaryInterfaceClient.h  BinaryInterfaceDummyLaserData.h  BinaryInterfaceLocalizationMapStruct.h  BinaryInterfaceLocalizationVisualizationStruct.h  BinaryInterfaceMapVisualizationStruct.h  BinaryInterfacePoseStruct.h  BinaryInterfaceServer.h  SystemStateStruct.h  TestClientLocalizationMap.cpp  TestClientLocalizationPose.cpp  TestClientLocalizationVisualization.cpp  TestClientMapVisualization.cpp  TestClientRecordingVisualization.cpp  TestClientSensorLaser.cpp  TestSystemStateHeartbeatClientLLS.cpp  TestSystemStateHeartbeatClientSupport.cpp  TestSystemStateHeartbeatServerLLS.cpp  TestSystemStateHeartbeatServerSupport.cpp
include/simple/: BinaryInterfaceClient.h  BinaryInterfaceClientSensorLaser.h  BinaryInterfacePoseStruct.h  BinaryInterfaceServer.h  LaserMessage.h  LaserServer.h  OdomMessage.h  OdomServer.h
resources/: CMakeLists.txt  simple_lanhai.desktop
sdk/: Global.cpp  Global.h  LidarDataProcess.cpp  LidarDataProcess.h  standard_interface.cpp
sdk/service/: LidarCheckService.cpp  LidarCheckService.h  LidarWebService.cpp  LidarWebService.h
src/: CMakeLists.txt  main.cpp
travis/: build_aarch64.sh  build_amd64.sh  build_x86.sh
